objects/wktNotificationLocationContent__c.object
<CustomObject>
    <description>The location-related content for the portal&apos;s notification emails.</description>
    <fields>
        <fullName>CorrectScreenCount__c</fullName>
        <description>The number of people screened correctly at this location.</description>
        <inlineHelpText>The number of people screened correctly at this location.</inlineHelpText>
        <label>Correct Screen Count</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentRatioText__c</fullName>
        <description>The document compliance ratio for this location.</description>
        <inlineHelpText>The document compliance ratio for this location.</inlineHelpText>
        <label>Document Ratio Text</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncorrectScreenCount__c</fullName>
        <description>The number of people who screened incorrectly at this location.</description>
        <inlineHelpText>The number of people who screened incorrectly at this location.</inlineHelpText>
        <label>Incorrect Screen Count</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The location whose statistics are shown in this row.</description>
        <inlineHelpText>The location whose statistics are shown in this row.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>wkt Notification Location Content</relationshipLabel>
        <relationshipName>wktNotificationLocationContent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PortalNotification__c</fullName>
        <description>The portal email notification that this location content belongs to.</description>
        <inlineHelpText>The portal email notification that this location content belongs to.</inlineHelpText>
        <label>Portal Notification</label>
        <referenceTo>PortalNotification__c</referenceTo>
        <relationshipLabel>wkt Notification Location Content</relationshipLabel>
        <relationshipName>wktNotificationLocationContent</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QualificationRatioText__c</fullName>
        <description>The qualification ratio for this location.</description>
        <inlineHelpText>The qualification ratio for this location.</inlineHelpText>
        <label>Qualification Ratio Text</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScreeningRatioText__c</fullName>
        <description>The screening compliance ratio for this location.</description>
        <inlineHelpText>The screening compliance ratio for this location.</inlineHelpText>
        <label>Screening Ratio Text</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferredOutScreenCount__c</fullName>
        <description>The number of people who screened at this location but subsequently transferred out.</description>
        <inlineHelpText>The number of people who screened at this location but subsequently transferred out.</inlineHelpText>
        <label>Transferred Out Screen Count</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnscreenedCount__c</fullName>
        <description>The number of people at this location who remain unscreened.</description>
        <inlineHelpText>The number of people at this location who remain unscreened.</inlineHelpText>
        <label>Unscreened Count</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>wkt Notification Location Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>wkt Notification Location Content Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wkt Notification Location Content</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>